--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hex</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="scripts/hexagon.js"></script>
-    <script src="scripts/sketch.js"></script>
+    <script src="/scripts/hexagon.js"></script>
+    <script src="/scripts/sketch.js"></script>
 </body>
 
 </html>
