--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -16,3 +16,20 @@ canvas {
     top: 0;
     font-size: 30px;
 }
+
+.winner {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transform: translate(-50%, -50%);
+}
