--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+html {
+    font-size: 16px;
 }
 
 canvas {
@@ -14,7 +19,7 @@ canvas {
     position: absolute;
     right: 0;
     top: 0;
-    font-size: 30px;
+    font-size: 2.5rem;
 }
 
 .winner {
@@ -23,7 +28,7 @@ canvas {
     align-items: center;
     justify-content: center;
     z-index: 1000;
-    font-size: 40px;
+    font-size: 2.8rem;
     font-family: sans-serif;
     font-weight: bold;
     left: 50%;
