Game creation dalidation added. Error displaying added

--- a/public/styles/create.css
+++ b/public/styles/create.css
@@ -37,3 +37,10 @@ main {
 .create-game-form__submit:hover {
     background-position-x: -100%;
 }
+
+.errors {
+    list-style: none;
+    background-color: rgb(231, 146, 146);
+    padding: 10px;
+    border-radius: 6px;
+}
