--- a/public/views/partials/scripts.ejs
+++ b/public/views/partials/scripts.ejs
@@ -1,4 +1,8 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    let socket = io();
+    let socket = io({
+        query: {
+            roomId: window.location.pathname.slice(1)
+        }
+    });
 </script>
